# velo-oracle-prime

./: .env.example  .env.production  .env.template  .gitignore  .railway-deploy-trigger  .railwayignore  ANALYTICAL_ENGINE_COMPLETE.md  ARCHITECTURE.md  AUDIT.md  AUTOMATION_GUIDE.md  BENCHMARK_IMPLEMENTATION.md  BENCHMARK_QUICKSTART.md  CI_SETUP.md  COMPLETE_INVENTORY.md  COMPLETION_REPORT.md  DATABASE_COMPLETE_REPORT.md  DATA_COLLECTION_NOTES.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_README.md  DEPLOYMENT_STATUS.md  Dockerfile  EVOLUTION_ROADMAP.md  FEAST_EVIDENTLY_IMPLEMENTATION.md  FINAL_ACCURATE_STATS.md  FINAL_DEPLOYMENT_REPORT.md  GITHUB_PUSH_SUMMARY.md  GOWRAN_ACTUAL_RUNNERS.txt  GOWRAN_PARK_VELO_FULL_REPORT_20260122.md  GOWRAN_PROCESSING_REPORT_20260122.md  GOWRAN_VELO_FULL_REPORT_20260122.md  GOWRAN_VERDICTS_SUGGESTIONS_20260122.md  IMPLEMENTATION_SUMMARY_OLD.md  INFRASTRUCTURE_PLAN.md  INTEGRATION_COMPLETE.md  KEMPTON_440_BETTING_SLIP.md  KEMPTON_440_VERDICT.md  KEMPTON_RACE_DAY_REPORT_20260121.md  LIVE_TESTING_23_RACES.md  MATHEMATICAL_EDGE_IMPLEMENTATION.md  MATHEMATICAL_EDGE_RESEARCH.md  (+122 more)
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
agents/: __init__.py  graph.py  models.py  run.py  tools.py
alembic/: env.py
app/: __init__.py  main.py  v10_entrypoint.py  velo_v12_intent_stack.py
benchmark/: README.md  __init__.py  baseline_hash.txt  baseline_metrics.json  check_regression.py  cli.py  freeze_manifest.py  manifest_2000.json  merge_shards.py  metrics.py  report.py  runner.py  tolerances.py
config/: creed.txt  logging.json  weights.json
(+641 files in other folders)
